# stratego

./: .gitignore  CITATION.cff  MANIFEST.in  PROJECT_REPORT_Haris.md  README.md  pyproject.toml  test.py  test_vllm.py  vllmModel.py
Data Files/: Compiled_Master_Results.xlsx  Mistral Olma.xlsx  olmo_gemma.xlsx
logs/: 20251110_190737_20251110_190737.csv  20251110_192917_20251110_192917.csv  20251110_204006_20251110_204006.csv  20251110_231324_20251110_231324.csv  20251111_103732_20251111_103732.csv  20251111_104658_20251111_104658.csv  20251111_113407_20251111_113407.csv  20251112_173913_20251112_173913.csv
semester_data/: diagram.puml  test.py  updated Compiled_Master_Results.xlsx
stratego/: Stratego-1.code-workspace  __init__.py  check_dual.py  config.py  custom_env.py  game_analyzer.py  game_logger.py  installer.py  main.py  main_1.py  problem_tracker.py  prompt_manager.py  prompt_optimizer.py  run_test.py  stratego_env_1.py
stratego/Patch/: Stratego_dual_env.py  Stratego_env.py
stratego/benchmarking/: csv_logger.py  main_benchmark.py  metrics.py  plot_metrics.py  run_benchmark.py  run_game.py  summary_writer.py  textarena_bootstrap.py
stratego/datasets/: __init__.py  builder.py  uploader.py
stratego/env/: __init__.py  custom_env.py  stratego_env.py  stratego_env_2.py
stratego/gui/: __init__.py  app.py  cli_runner.py
stratego/logs/: 20251113_203801_20251113_203801.csv
stratego/models/: __init__.py  base.py  hf_model.py  ollama_model.py  vllm_model.py
stratego/prompts/: __init__.py  base_prompt.txt  current_prompt.txt  current_prompt_prev.txt  evaluate_prompts_multiturn.py  game_summaries.json  presets.py  schemas.py
stratego/strategies/: __init__.py  aggressive_strategy.py  base.py  random_move.py  (+2 more)
(+23 files in other folders)
