[project]
name = "stratego"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "textarena",
  "langchain-ollama",
  "langchain-core",
  "pydantic>=2"
]

[project.optional-dependencies]
hf = ["transformers>=4.44", "accelerate", "torch", "hf_xet"]

[project.scripts]
stratego = "stratego.main:cli"
stratego-install-env = "stratego.installer:main"
