[project]
name = "stratego"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
  "textarena",
  "langchain-ollama",
  "langchain-core",
  "pydantic>=2",
  "Pillow"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["log", "log.*"]

[project.optional-dependencies]
hf = ["transformers>=4.44", "accelerate", "torch", "hf_xet"]

[project.scripts]
stratego = "stratego.main:cli"
gui = "stratego.gui.app:main"
stratego-run = "stratego.gui.cli_runner:main"
stratego-install-env = "stratego.installer:main"
benchmark = "stratego.benchmarking.main_benchmark:main"
